# google-maps-scrapper

./: README.md  app.py  main.py  pyproject.toml
scrapper/: fatcher.py  main.py  maps.py  parser.py  storage.py
utils/: ]  chatGPT with Python  find_email_url.py  save_data.py  scan_local.py
