[project]
name = "google-maps-scrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "google-cloud-firestore>=2.21.0",
    "googlemaps>=4.10.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
